2016-05-24 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-492

	* src/disort.cc, disort.h, m_disort.cc, methods.cc:
	Renamed pfct_method options. Added options for using highest or median
	T_grid points. Made median the default option.

	NOTE 1: Renaming breaks backward compatibility.

	NOTE 2: The default change might (slightly) modify your results if you
	had run with default option before (equiv. to 'low').

	* 3rdparty/disort1.2/DISORT.f.orig, ErrPack.f.orig:
	(Re)Added original code files.

	* 3rdparty/polradtran, 3rdparty/polradtran/rt4/*:
	Added place for polradtran (RT3/4) code and original RT4 code.

2016-05-24 Jakob Dörr  <jakobdoerr@googlemail.com>

	* arts-2-3-492

	* src/m_doit.cc (doit_i_field_monoIterate):

	 Fixed a bug in the convergence acceleration

2016-05-23  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-491
	
	* src/zeeman.cc (create_Zeeman_linerecordarrays):

	Turned a couple of variables into const references to avoid unnecessary
	copying. 

2016-05-20  Richard Larsson   <ric.larsson@gmail.com>
	
	* arts-2-3-490
	
	* src/{quantum.h,zeeman.cc}:  Previous commits contained C++11 
	features.  Thanks Oliver for pointing this out and showing me
	how to fix it.

2016-05-20  Richard Larsson   <ric.larsson@gmail.com>
	
	* arts-2-3-489
	
	* src/quantum.h:  Changed from "Hund" to "Hund : Index".  Relying
	on Hudson to test if this works because it compiles locally, just
	as the last commit did?  If this fix does not work, then I will
	declare specific integers in quantum.h instead.

2016-05-20  Richard Larsson   <ric.larsson@gmail.com>
	
	* arts-2-3-488
	
	This update requires updating zeeman_constants.xml in arts-xml-data.
	Found bug in implementation for NO.  Should be fixed now following
	Berdyugina and Solanki's 2002 paper.
	
	Note:  This only works from a catalog that defines quantum numbers 
	that we can understand.  Reading HITRAN presently does not work for
	NO because the quantum numbers are not well-represented.  The 