@@ -10633,12 +10633,12 @@ void define_md_data_raw()
            "dnlte_dx_source",
            "nlte_dsource_dx",
            "zeeman_linerecord_precalc",
+           "zeeman_frequencyshiftconstant_precalc",
            "f_grid",
            "abs_species",
            "jacobian_quantities",
            "abs_lineshape",
            "isotopologue_ratios",
-           "isotopologue_quantum",
            "partition_functions",
            "rtp_pressure", "rtp_temperature", "lm_p_lim", "rtp_temperature_nlte", "rtp_vmr",
            "rtp_mag", "rtp_los", "atmosphere_dim"),
@@ -15289,7 +15289,7 @@ void define_md_data_raw()
          "Will reset the *zeeman_linerecord_precalc* at every call.\n"
          ),
         AUTHORS( "Richard Larsson" ),
-        OUT( "zeeman_linerecord_precalc" ),
+        OUT( "zeeman_linerecord_precalc", "zeeman_frequencyshiftconstant_precalc" ),
         GOUT(),
         GOUT_TYPE(),
         GOUT_DESC(),
